fixed context menu search bar overflowing

--- a/packages/editor/src/plugins/contextMenu/react-menu/style.module.scss
+++ b/packages/editor/src/plugins/contextMenu/react-menu/style.module.scss
@@ -12,7 +12,7 @@
   z-index: 10000000000 !important;
 
   .search-bar {
-    width: calc(100% + 10px);
+    width: 100%;
     // remove border on search bar
     border: 0;
     // remove border when focused
